# Bi-ManualManipulation

./: .gitignore  README.md
bimanual_controller/: package.xml  setup.cfg  setup.py
bimanual_controller/bimanual_controller/: limbs_mockup_node.py
bimanual_controller/config/: grasp_params.yaml  limbs_mockup.rviz  motion_params.yaml
bimanual_controller/launch/: limbs_mockup.launch.py
bimanual_controller/urdf/: bimanual_system.xacro  hand.xacro  left_limb.xacro  right_limb.xacro
bimanual_isaac/: README.md  package.xml  setup.cfg  setup.py
bimanual_isaac/bimanual_isaac/: spawn_bimanual.py
bimanual_isaac/launch/: sim_bimanual.launch.py
bimanual_isaac/scripts/: spawn_bimanual.py
bimanual_isaac/world/: allegro_hand.usd  franka.usd
bimanual_mockup/: CMakeLists.txt  README.md  package.xml
bimanual_mockup/config/: camera_params.yaml  object_params.yaml  world_mockup.rviz  world_params.yaml
bimanual_mockup/launch/: world_mockup.launch.py
bimanual_mockup/src/: bimanual_mockup.cpp  world_mockup.cpp
bimanual_msgs/: CMakeLists.txt  package.xml
bimanual_msgs/action/: GraspUntilContact.action  MoveArmToPose.action  ReleaseGrasp.action
bimanual_msgs/msg/: GraspState.msg  Tactile.msg
bimanual_planner/: package.xml  setup.cfg  setup.py
bimanual_planner/bimanual_planner/: task_manager.py
bimanual_planner/config/: limbs_mockup.rviz  (+1 more)
bimanual_sensor/: package.xml  setup.cfg  setup.py
bimanual_sensor/bimanual_sensor/: object_sensor_node.py
bimanual_sensor/config/: cv_params.yaml  object_sensor.rviz
bimanual_sensor/launch/: object_sensor.launch.py
(+3 files in other folders)
